[package]
name = "helmer-micro"
version = "0.0.1"
description = "Rock solid GIFs, straight from your desktop."
authors = ["Siddharth <siddharth99c@gmail.com>"]
license = ""
repository = "https://www.github.com/clearlysid/helmer-micro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
	"api-all",
	"icon-png",
	"shell-open-api",
	"system-tray",
] }
scap = { git = "https://github.com/clearlysid/scap/", branch = "v0.0.1/main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"
os_info = { version = "3", default-features = false }
opener = "0.6.1"
gifski = { version = "1.12.2", default-features = false, features = [
	"png",
	"gifsicle",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
