[package]
name = "helmer-micro"
version = "0.0.1"
description = "Rock solid GIFs, straight from your desktop."
authors = ["Siddharth <siddharth99c@gmail.com>"]
license = ""
repository = "https://www.github.com/clearlysid/helmer-micro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
scap = { git = "https://github.com/helmerapp/scap/", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"
os_info = { version = "3", default-features = false }
opener = "0.6.1"
gifski = { version = "1.12.2", default-features = false, features = [
	"png",
	"gifsicle",
] }
imgref = "1.10.0"
rgb = "0.8.37"
rand = "0.8.5"
tempfile = "3.10.0"
chrono = "0.4.33"
anyhow = "1.0"
itertools = "0.12.0"
rgb2yuv420 = "0.2.3"
ac-ffmpeg = { git = "https://github.com/angelcam/rust-ac-ffmpeg.git", branch="master" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"