[package]
name = "micro"
version = "0.3.2"
description = "Rock solid GIFs, straight from your desktop."
authors = ["Siddharth <siddharth99c@gmail.com>"]
license = "AGPL-3.0-only"
repository = "https://www.github.com/helmerapp/micro"
edition = "2021"
homepage = "https://www.helmer.app/micro"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
	"protocol-asset",
	"tray-icon",
	"image-png",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-utils = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-decorum = { git = "https://github.com/clearlysid/tauri-plugin-decorum", branch = "main" }
scap = { git = "https://github.com/helmerapp/scap/", branch = "main" }
henx = { git = "https://github.com/helmerapp/henx/", branch = "main" }
tokio = { version = "1", features = ["full"] }
os_info = { version = "3", default-features = false }
opener = "0.6.1"
gifski = { version = "1.12.2", default-features = false, features = [
	"png",
	"gifsicle",
] }
imgref = "1.10.0"
rgb = "0.8.37"
rand = "0.8.5"
tempfile = "3.10.0"
chrono = "0.4.33"
anyhow = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
